# wsdd-native

./: .gitignore  Acknowledgements.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  dependencies.json
.github/: CODEOWNERS  remote-build.py
.github/workflows/: build.yml  check.yml  publish.yml
cmake/: dependencies.cmake  detect_system.cmake  install.cmake
cmake/patches/: spdlog.diff
config/bsd/usr/local/etc/rc.d/: wsddn
config/firewalls/etc/firewalld/services/: wsddn-http.xml  wsddn.xml
config/firewalls/etc/ufw/applications.d/: wsddn
config/freebsd/usr/local/etc/newsyslog.conf.d/: wsddn.conf
config/metadata/: README.md  default.xml  other.xml
config/openbsd/etc/rc.d/: wsddn
config/openrc/etc/init.d/: wsddn
config/openrc/etc/logrotate.d/: wsddn
config/openrc/init.d/: wsddn
config/systemd/etc/ufw/applications.d/: wsddn
config/systemd/usr/lib/systemd/system/: wsddn.service
config/sysv/etc/init.d/: wsddn
doc/: wsddn.8  wsddn.8.adoc  wsddn.8.html  wsddn.8.md
installers/: common.py  wsddn.conf
installers/alpine/: APKBUILD  update.py  wsdd-native.pre-install
installers/arch/: PKGBUILD  update.py
installers/bsd/: build.py  make-toolchain.py  post_deinstall  post_install
installers/deb/: build.py  copyright  postinst  postrm  preinst  prerm
installers/deb-systemd/: build.py  postinst  postrm  prerm  update-repo.py
installers/docker/: Dockerfile  run-wsddn
installers/freebsd/: build.py  make-toolchain.py  pre
installers/mac/: build.py  distribution.xml  notarize  set-github-keychain  wsddn-uninstall
installers/mac/html/: conclusion.html  license.html  welcome.html
installers/mac/scripts/: postinstall  preinstall
installers/mac/wrapper/: CMakeLists.txt  Info.template.plist  main.mm  populate.py
installers/openbsd/: build.py
installers/rpm/: update.py  wsddn.spec
installers/rpm-systemd/: build.py  update-repo.py  wsddn.spec
src/: Info.template.plist  app_state.cpp  app_state.h  command_line.cpp  command_line.h  config.cpp  config.h  config_mac.cpp  config_samba.cpp  exc_handling.cpp  exc_handling.h  http_request.cpp  http_request.h  http_request_parser.cpp  http_request_parser.h  http_response.cpp  http_response.h  http_server.cpp  http_server.h  interface_monitor.h  interface_monitor_bsd.cpp  interface_monitor_linux.cpp  main.cpp  pch.h  pid_file.h  server_manager.cpp  server_manager.h  sys_config.h.in  sys_socket.h  sys_util.cpp  sys_util.h  sys_util_mac.cpp  udp_server.cpp  udp_server.h  util.h  wsd_server.cpp  wsd_server.h  xml_wrapper.h
tools/: create-release  fuzzer.py  hashdeps  uncache  upload-dependencies
